# shamir

./: Cargo.toml
src/: main.rs  shamir.rs  wrapper.rs
