[package]
name = "distributed_encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.79"
bincode = "1.3.3"
clap = { version = "4.3.22", features = ["cargo", "derive"] }
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
sha3 = "0.10.8"
